# pyoptsparse

./: .coveragerc  .flake8  .git-blame-ignore-rev  .gitignore  .hgignore  .isort.cfg  .travis.yml  .zenodo.json  LICENSE  LICENSE.md  README  README.md  README.rst  __init__.py  build.bat  build.sh  build_local.bat  build_local.sh  codecov.yml  environment.yml  meson.build  meson_options.txt  mytest.md  pyproject.toml  release_notes.md  requirements.txt  ruff.toml  setup.py  travis_deploy_rsa.enc  win-environment.yml
pyoptsparse/: __init__.py  meson.build  pyOpt_MPI.py  pyOpt_constraint.py  pyOpt_error.py  pyOpt_gradient.py  pyOpt_history.py  pyOpt_objective.py  pyOpt_optimization.py  pyOpt_optimizer.py  pyOpt_solution.py  pyOpt_types.py  pyOpt_utils.py  pyOpt_variable.py  setup.py  types.py
pyoptsparse/postprocessing/: OptView.py  OptView_baseclass.py  OptView_dash.py  RECORDER.sql  baseclasses.py  colors.py  data_structures.py  general_widgets.py  main_controller.py  meson.build  opt_hist.hst  opt_view_controller.py  utils.py  view_saved_figure.py
pyoptsparse/postprocessing/OptViewDash/: OptView_dash2.py  README.md  requirements.txt
pyoptsparse/postprocessing/OptViewDash/assets/: custom-styles2.css
pyoptsparse/postprocessing/assets/: base-styles.css  custom-styles.css
pyoptsparse/postprocessing/baseclasses/: controller.py  meson.build  model.py  view.py
pyoptsparse/postprocessing/controllers/: main_controller.py  mpl_controller.py  plot_controller.py
pyoptsparse/postprocessing/models/: history_data.py
pyoptsparse/postprocessing/sub_MVCs/: configure_controller.py  plot_controller.py  plot_model.py  tab_controller.py  tab_view.py  widgets.py
pyoptsparse/postprocessing/sub_MVCs/configure_plot_window/: configure_controller.py  configure_model.py  configure_view.py  widgets.py
pyoptsparse/postprocessing/sub_MVCs/metadata_window/: metadata_controller.py  metadata_model.py  metadata_view.py
pyoptsparse/postprocessing/sub_MVCs/plotting/: nicePlotsStyle  plot_model.py  plot_view.py
pyoptsparse/postprocessing/sub_MVCs/tab_window/: tab_controller.py  tab_model.py  tab_view.py  tab_widgets.py
pyoptsparse/postprocessing/sub_MVCs/variables/: x_controller.py  x_view.py  y_controller.py  y_view.py
pyoptsparse/postprocessing/sub_window/: controller.py  data_structures.py  model.py  plot_controller.py  plot_view.py  state_controller.py  view.py
pyoptsparse/postprocessing/sub_window/utils/: combo_box.py
pyoptsparse/postprocessing/sub_windows/: configure_plot_window.py  meson.build  metadata_window.py  mpl_figureoptions.py  plotting.py  settings_window.py  tab_window.py
pyoptsparse/postprocessing/sub_windows/configure_plot_window/: configure_controller.py  configure_model.py  configure_view.py  meson.build
pyoptsparse/postprocessing/sub_windows/metadata_window/: meson.build  metadata_controller.py  metadata_model.py  metadata_view.py
pyoptsparse/postprocessing/sub_windows/plotting/: meson.build  mpl_figureoptions.py  plot_model.py  plot_view.py
pyoptsparse/postprocessing/sub_windows/settings_window/: meson.build  settings_controller.py  settings_model.py  settings_view.py
pyoptsparse/postprocessing/sub_windows/tab_window/: meson.build  tab_controller.py  tab_model.py  tab_view.py
pyoptsparse/postprocessing/sub_windows/variables/: meson.build  x_controller.py  x_view.py  y_controller.py  y_view.py
pyoptsparse/postprocessing/utils/: base_classes.py  button.py  colors.py  combo_box.py  data_structures.py  list_widgets.py  meson.build  switch.py  widgets.py
pyoptsparse/postprocessing/views/: message_box_views.py  mpl_canvas.py  plot_view.py
pyoptsparse/pyALPSO/: LICENSE  README  alpso.py  alpso_ext.py  meson.build  pyALPSO.py  setup.py
pyoptsparse/pyCONMIN/: LICENSE  README  meson.build  pyCONMIN.py  setup.py
pyoptsparse/pyCONMIN/source/: README  cnmn00.bak  cnmn00.f  cnmn01.f  cnmn02.f  cnmn03.bak  cnmn03.f  cnmn04.f  cnmn05.bak  cnmn05.f  cnmn06.bak  cnmn06.f  cnmn07.f  cnmn08.f  cnmn09.f  conmin.f  openunit.f
pyoptsparse/pyCONMIN/source/f2py/: README  conmin-f2pywrappers.f  conmin.pyf  conminmodule.c
pyoptsparse/pyFSQP/: LICENSE  README  __init__.py  pyFSQP.py  setup.py
pyoptsparse/pyFSQP/source/: README  openunit.f  qld.f
pyoptsparse/pyFSQP/source/f2py/: ffsqp.pyf
pyoptsparse/pyIPOPT/: __init__.py  find_python_path.py  meson.build  pyIPOPT.py  setup.py
pyoptsparse/pyIPOPT/src/: callback.c  hook.h  pyipoptcoremodule.c
pyoptsparse/pyNLPQL/: LICENSE  README  pyNLPQL.py  setup.py
pyoptsparse/pyNLPQL/source/: README  closeunit.f
pyoptsparse/pyNLPQL/source/f2py/: nlpql.pyf
pyoptsparse/pyNLPQLP/: LICENSE  README  meson.build  pyNLPQLP.py  setup.py
pyoptsparse/pyNLPQLP/source/: README  wrapper.F90
pyoptsparse/pyNLPQLP/source/f2py/: nlpqlp.pyf
pyoptsparse/pyNLPY_AUGLAG/: __init__.py  pyNLPY_AUGLAG.py  setup.py
pyoptsparse/pyNOMAD/: LICENSE  README  pyNOMAD.py  setup.py
pyoptsparse/pyNOMAD/source/: Callback.h  NomadLinker.cpp  NomadLinker.h  NomadLinker.i
pyoptsparse/pyNSGA2/: LICENSE  README  __init__.py  meson.build  pyNSGA2.py  setup.py
pyoptsparse/pyNSGA2/source/: README  allocate.c  crowddist.c  nsga2.c  nsga2.h  rand.c  rand.h  tourselect.c
pyoptsparse/pyPSQP/: LICENSE  README  __init__.py  meson.build  pyPSQP.py  setup.py
pyoptsparse/pyPSQP/source/: README  mqsubs.f  openunit.f  pqsubs.f  psqp.f  psqp_wrap.f  psqp_wrap.f90
pyoptsparse/pyParOpt/: ParOpt.py  meson.build  pyParOpt.py  setup.py
pyoptsparse/pySLSQP/: LICENSE  README  __init__.py  meson.build  pySLSQP.py  setup.py
pyoptsparse/pySLSQP/source/: README  daxpy.f  dcopy.f  drot.f  drotg.f  dscal.f  h12.f  hfti.f  ldl.f  ldp.f  lsei.f  lsi.f  lsq.f  nnls.f  slsqp.f  slsqpb.f
pyoptsparse/pySNOPT/: LICENSE  README  __init__.py  meson.build  pySNOPT.py  setup.py
pyoptsparse/pySNOPT/libsnopt/: build_snopt.py  meson.build  meson.options  pyproject.toml
pyoptsparse/pySNOPT/source/: ChangeLog  README  grab-all-fortran-files.py  openunit.f
pyoptsparse/pyUNO/: pyUNO.py
pyoptsparse/pyUno/: pyUno.py
pyoptsparse/testing/: __init__.py  pyOpt_testing.py
(+314 files in other folders)
