[build-system]
requires = ["setuptools", "numpy", "wheel"]

[tool.isort]
profile = "black"
line_length = 120
force_sort_within_sections = true
extend_skip = "setup.py"
skip_glob = ["pyoptsparse/postprocessing/*.py", "*__init__.py", "**/alpso*.py"]
import_heading_stdlib = "Standard Python modules"
import_heading_thirdparty = "External modules"
import_heading_firstparty = "First party modules"
import_heading_localfolder = "Local modules"

[tool.black]
line_length = 120
