
python_sources = [
    'OptView.py',
    'OptView_baseclass.py',
    'OptView_dash.py',
    '__init__.py',
    'view_saved_figure.py'
]

py3_target.install_sources(
  python_sources,
  pure: true,
  subdir: 'pyoptsparse/postprocessing'
)

asset_sources = [
    'assets/OptViewIcon.gif',
    'assets/base-styles.css',
    'assets/custom-styles.css',
    'assets/logo.png'
]

py3_target.install_sources(
  asset_sources,
  pure: true,
  subdir: 'pyoptsparse/postprocessing/assets'
)